force-app/main/default/objects/Indicator_Item__mdt/Indicator_Item__mdt.object-meta.xml
<CustomObject>
    <description>Represents an individual indicator configuration.</description>
    <label>Indicator Item</label>
    <pluralLabel>Indicator Items</pluralLabel>
</CustomObject>