force-app/main/default/objects/Indicator_Item__mdt/fields/Advanced_Field__c.field-meta.xml
<CustomField>
    <fullName>Advanced_Field__c</fullName>
    <inlineHelpText>To traverse utilize a field from a record higher in the parent-child relationship, directly enter the spanning fields (up to 5 level away).

Example:  Contact.Account.Owner.FirstName</inlineHelpText>
    <label>Advanced Field</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>