force-app/main/default/objects/Indicator_Item__mdt/fields/Empty_Static_Text_Behavior__c.field-meta.xml
<CustomField>
    <fullName>Empty_Static_Text_Behavior__c</fullName>
    <label>Empty Static Text Behavior</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Use Icon Only</fullName>
                <default>true</default>
                <label>Use Icon Only</label>
            </value>
            <value>
                <fullName>Use Field Value</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>