force-app/main/default/objects/Indicator_Item__mdt/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <label>Field</label>
    <metadataRelationshipControllingField>Indicator_Item__mdt.sObject__c</metadataRelationshipControllingField>
    <referenceTo>EntityParticle</referenceTo>
    <relationshipLabel>Indicator_Items</relationshipLabel>
    <relationshipName>Indicator_Items</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>