force-app/main/default/objects/Indicator_Item__mdt/fields/Icon_Class__c.field-meta.xml
<CustomField>
    <fullName>Icon_Class__c</fullName>
    <inlineHelpText>(Optional) The Font Awesome icon class from https://lightningdesignsystem.com/icons/  when being used instead of Field, Text, or Image URL.</inlineHelpText>
    <label>Icon Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>