force-app/main/default/objects/Indicator_Item__mdt/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <inlineHelpText>(Optional) The URL to the image of the Indicator when being used instead of Field, Text, or Icon.</inlineHelpText>
    <label>Image</label>
    <length>255</length>
    <type>Text</type>
</CustomField>