force-app/main/default/objects/Indicator_Item__mdt/fields/Inverse_Hover_Text__c.field-meta.xml
<CustomField>
    <fullName>Inverse_Hover_Text__c</fullName>
    <inlineHelpText>The hover text of the Indicator when false or blank.</inlineHelpText>
    <label>Inverse Hover Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>