force-app/main/default/objects/Indicator_Item__mdt/fields/Inverse_Icon_Value__c.field-meta.xml
<CustomField>
    <fullName>Inverse_Icon_Value__c</fullName>
    <inlineHelpText>(Optional) The Lightning Design System icon from https://lightningdesignsystem.com/icons/ when being used instead of Field, Text, or Image URL for false or blank values.</inlineHelpText>
    <label>Inverse Icon Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>