force-app/main/default/objects/Indicator_Item__mdt/fields/Inverse_Image__c.field-meta.xml
<CustomField>
    <fullName>Inverse_Image__c</fullName>
    <inlineHelpText>(Optional) The URL to the image of the Indicator when being used instead of Field, Text, or Icon for false or blank values.</inlineHelpText>
    <label>Inverse Image</label>
    <length>255</length>
    <type>Text</type>
</CustomField>