force-app/main/default/objects/Indicator_Item__mdt/fields/Inverse_Static_Text__c.field-meta.xml
<CustomField>
    <fullName>Inverse_Static_Text__c</fullName>
    <inlineHelpText>(Optional) The Static Text used for false or blank when being used instead of Field, Icon, or Image URL. NOTE: Displays first 3 characters / emojis</inlineHelpText>
    <label>Inverse Static Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>