force-app/main/default/objects/Indicator_Item__mdt/fields/Show_False_or_Blank__c.field-meta.xml
<CustomField>
    <fullName>Show_False_or_Blank__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Should this indicator display anything when the field is false or blank?</inlineHelpText>
    <label>Show when False or Blank</label>
    <type>Checkbox</type>
</CustomField>