force-app/main/default/objects/Indicator_Item__mdt/fields/sObject__c.field-meta.xml
<CustomField>
    <fullName>sObject__c</fullName>
    <inlineHelpText>The record page on which this field will be displayed.</inlineHelpText>
    <label>sObject</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Indicator_Items</relationshipLabel>
    <relationshipName>Indicator_Items</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>