force-app/main/default/objects/Indicator_Item__mdt/fields/Static_Text__c.field-meta.xml
<CustomField>
    <fullName>Static_Text__c</fullName>
    <inlineHelpText>(Optional) The Static Text used when being used instead of Field, Icon, or Image URL.  NOTE: Displays first 3 characters / emojis</inlineHelpText>
    <label>Static Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>