force-app/main/default/objects/Indicator_Item__mdt/fields/Zero_Behavior__c.field-meta.xml
<CustomField>
    <fullName>Zero_Behavior__c</fullName>
    <label>Zero Value Handling</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Treat Zeroes as Numbers</fullName>
            </value>
            <value>
                <fullName>Treat Zeroes as Blanks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>