force-app/main/default/objects/Indicator_Item__mdt/validationRules/EmptyStaticTextMustHaveBehavior.validationRule-meta.xml
<ValidationRule>
    <fullName>EmptyStaticTextMustHaveBehavior</fullName>
    <active>true</active>
    <description>Require a behavior when static text is empty.</description>
    <errorConditionFormula>ISPICKVAL(Empty_Static_Text_Behavior__c,'') &amp;&amp; ISBLANK(Static_Text__c)</errorConditionFormula>
    <errorDisplayField>Empty_Static_Text_Behavior__c</errorDisplayField>
    <errorMessage>If Static Text field is empty, please select a behavior for the indicator.</errorMessage>
</ValidationRule>